--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <input type="number" id="guess">
-    <button>Tipp</button>
+    <button onclick="TippClicked()">Tipp</button>
     <script src="script.js"></script>
 </body>
 </html>
